src/objects/UID_Stocked_Product__c.object
<CustomObject>
    <fields>
        <fullName>UID_Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stocked Products</relationshipLabel>
        <relationshipName>Stocked_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UID_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UID_Report_Date__c</fullName>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UID_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UID_Stock_Cover_Calculation_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Cover Calculation Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UID_Stocked_Product_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Stocked Product External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UID_Summarized_Invoice_Ranking_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summarized Invoice Ranking Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Stocked Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UID_Distributor__c</columns>
        <columns>UID_Start_Date__c</columns>
        <columns>UID_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Stocked Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stocked Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>